# 3d-script-engine

./: CMakeLists.txt  commit.txt
data/3d/: cube.json
src/: core.cpp  core.hpp  main.cpp
